Make certain parts look nicer. No, I don't know how to fix the height of the search button.

--- a/index.html
+++ b/index.html
@@ -14,14 +14,26 @@
                 border-left: 1px solid #ccc;
                 padding-left: 5px
             }
-            input { background-color: #245; }
+            input {
+                background-color: #245;
+                border-color: #57a;
+            }
             input[type="search"]::-webkit-search-cancel-button {
                 display: none;
             }
             .halt { color: #f88; }
-            .clicked { background-color: #440; }
-            .empty { background-color: #000; }
-            .locked { background-color: #400; }
+            .clicked {
+                background-color: #440;
+                border-color: #880;
+            }
+            .empty {
+                background-color: #000;
+                border-color: #444;
+            }
+            .locked {
+                background-color: #400;
+                border-color: #800;
+            }
             .name {
                 background-color: #0000;
                 border: 0px solid #0000
