--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <div id="sel">
             <button class="clicked" id="lprss">LPrSS</button>
             <button class="empty" id="tilde">Tilde not.</button>
-            <button class="empty" id="pair">Pair Seq</button>
-            <button class="empty" id="spms"> Strong Ptr</button>
+            <button class="empty" id="pair">Pair Seq.</button>
+            <button class="empty" id="spms">Strong Ptr</button>
+            <button class="empty" id="sudden">Sudden Seq.</button>
+            <button class="empty" id="dbms">Diag. BMS</button>
         </div><br>
         <form id="search">
             <input type="search" id="qry">
